--- a/modD/DESAFIO002/style.css
+++ b/modD/DESAFIO002/style.css
@@ -1,2 +1,34 @@
 @charset "UTF-8";
 
+*{
+    padding: 0px;
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+    background-color: rgb(15, 138, 138);
+}
+
+header{
+    color: white;
+    text-align: center;
+}
+
+main{
+    background-color: white;
+    border-radius: 10px;
+    padding: 15px;
+    width: 500px;
+    margin: auto;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.548);
+
+}
+
+footer{
+    
+    color: white;
+    text-align: center;
+    font-style: italic;
+    
+}
